--- a/.github/workflows/check-photo-manager.yml
+++ b/.github/workflows/check-photo-manager.yml
@@ -10,6 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         pm-version:
+          - 2.7.0
           - 2.7.2
         version:
           - "2.2.0"
@@ -36,7 +37,7 @@ jobs:
         shell: bash
 
       - name: Install dependencies
-        run: flutter pub get
+        run: flutter pub get -v
         working-directory: ./photo_manager_test_version
 
       - name: Build debug apk
