--- a/.github/workflows/check-photo-manager.yml
+++ b/.github/workflows/check-photo-manager.yml
@@ -19,7 +19,7 @@ jobs:
           - "3.3.10"
           - "3.7.0"
           - "3.10.0"
-
+    name: pm(${{ matrix.pm-version }}), flutter(${{ matrix.version }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup Flutter
