--- a/.github/workflows/check-photo-manager.yml
+++ b/.github/workflows/check-photo-manager.yml
@@ -26,7 +26,7 @@ jobs:
           - "11"
           - "17"
 
-    name: pm(${{ matrix.pm-version }}), flutter(${{ matrix.version }}, java(${{ matrix.java-version }})
+    name: pm(${{ matrix.pm-version }}), flutter(${{ matrix.version }}, java(${{ matrix.java-version }}))
     steps:
       - uses: actions/checkout@v3
       - name: Setup Flutter
@@ -39,8 +39,6 @@ jobs:
         with:
           distribution: "temurin"
           java-version: ${{ matrix.java-version }}
-          cache: "gradle"
-
       - name: Show java & flutter info
         run: |
           java --version
