--- a/.github/workflows/check-photo-manager.yml
+++ b/.github/workflows/check-photo-manager.yml
@@ -39,11 +39,14 @@ jobs:
         with:
           distribution: "temurin"
           java-version: ${{ matrix.java-version }}
-      - name: Show java & flutter info
+      - name: Show java version
         run: |
-          java --version
-          echo $JAVA_HOME
-          flutter doctor -v
+          echo "JAVA_HOME: $JAVA_HOME"
+          echo "java -version"
+          java -version
+          
+      - name: Flutter doctor -v
+        run: flutter doctor -v
 
       - name: Create new project
         run: flutter create photo_manager_test_version
