--- a/.github/workflows/check-photo-manager.yml
+++ b/.github/workflows/check-photo-manager.yml
@@ -22,7 +22,7 @@ jobs:
           - "3.10.0"
           - "3.13.9"
         java-version:
-          - "8"
+          # - "8" # The AGP cannot support java 8, so we can't test it.
           - "11"
           - "17"
 
@@ -35,7 +35,7 @@ jobs:
           flutter-version: ${{ matrix.version }}
           cache: true
       - name: Setup java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: "temurin"
           java-version: ${{ matrix.java-version }}
@@ -44,7 +44,7 @@ jobs:
           echo "JAVA_HOME: $JAVA_HOME"
           echo "java -version"
           java -version
-          
+
       - name: Flutter doctor -v
         run: flutter doctor -v
 
