ci(analyze): Add cache for setup flutter
Signed-off-by: CaiJingLong <cjl_spy@163.com>

--- a/.github/workflows/check-pm-analyze.yml
+++ b/.github/workflows/check-pm-analyze.yml
@@ -14,6 +14,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.13.9'
+          cache: true
       - name: Analyze photo manager code
         run:
           flutter analyze lib example/lib
