--- a/.github/workflows/check-pm-analyze.yml
+++ b/.github/workflows/check-pm-analyze.yml
@@ -7,14 +7,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          github-server-url: https://github.com/fluttercandies/flutter_photo_manager.git
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.13.9'
+          flutter-version: "3.13.9"
           cache: true
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          repository: fluttercandies/flutter_photo_manager
+          path: flutter_photo_manager
       - name: Analyze photo manager code
-        run:
-          flutter analyze lib example/lib
+        run: flutter analyze lib example/lib
+        working-directory: flutter_photo_manager
