ci(analyze): Add job name
Signed-off-by: CaiJingLong <cjl_spy@163.com>

--- a/.github/workflows/check-pm-analyze.yml
+++ b/.github/workflows/check-pm-analyze.yml
@@ -4,7 +4,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  analyze:
+    name: Analyze photo manager code
     runs-on: ubuntu-latest
     steps:
       - name: Setup Flutter
