--- a/.github/workflows/check-photo-manager.yml
+++ b/.github/workflows/check-photo-manager.yml
@@ -11,7 +11,8 @@ jobs:
       matrix:
         pm-version:
           - 2.7.2
-          - 2.8.0
+          - 2.8.1
+          - 3.0.0-dev.1
         version:
           - "2.2.0"
           - "2.5.3"
